Pasting image into text editor causes freeze #36742

Closed
opened 2013-09-16 18:30:04 +02:00 by Paul R · 4 comments

%%%--- Operating System, Graphics card ---
Linux SuSE 12.2 (x86_64)
NVidia GTX560ti (official driver)

- Blender version with error, and version that worked ---

issue in all versions tested:
2.64a, 2.68a, builtbot (r60095)

- Short description of error ---

Accidentally pasting an image into Text Editor leads to a freeze.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Copy image to clipboard from another program - Firefox 'Copy image'
ctrl + v into Blender Text Editor%%%

%%%--- Operating System, Graphics card --- Linux SuSE 12.2 (x86_64) NVidia GTX560ti (official driver) - Blender version with error, and version that worked --- issue in all versions tested: 2.64a, 2.68a, builtbot (r60095) - Short description of error --- Accidentally pasting an image into Text Editor leads to a freeze. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Copy image to clipboard from another program - Firefox 'Copy image' ctrl + v into Blender Text Editor%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r60173, thanks for the report! :)%%%

%%%Fixed in r60173, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks for the fix :)%%%

%%%Thanks for the fix :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36742
No description provided.