Fix [#36742] Pasting image into text editor causes freeze

Last fallback (XCLIB_XCOUT_FALLBACK_TEXT) was not checked, hence infinitly looping...